Fix overlapping of footer

--- a/client/src/pages/Profile/profile.css
+++ b/client/src/pages/Profile/profile.css
@@ -1,3 +1,6 @@
+.profilePage{
+    margin-bottom:8rem;
+}
 .profileInfoContainer{
     width:42rem;
 }
